# pageant

./: .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  TODO.txt  generated_images  hi.txt  index.html  package-lock.json  package.json  pyproject.toml  test-cosmos-hover.ts  test-extension-manual.ts  test_design_system.py  test_modal.py  vite.config.ts  vitest.config.ts
.annotations/: Makefile.json  TODO.md.json  TODO.txt.json  hi.txt.json
.claude/plans/: prompts-to-generations-refactor.md
backend/: analysis_routes.py  config.py  gemini_service.py  generate_frontend_designs.py  generate_pageant.py  metadata_manager.py  server.py  taste_exporter.py
backend/.annotations/: config.py.json
backend/prompts/: concept_generation.txt  design_dimensions.txt  design_token_extraction.txt  dimension_analysis.txt  iteration.txt  polish_prompts.txt  suggest_dimensions_multi.txt  variation_structured.txt  variation_system.txt
backend/search/: __init__.py  embedding_service.py  indexer.py  search_service.py  vector_store.py
backend/tests/: conftest.py  test_atomic_timing.py  test_batch_generation.py  (+15 more)
claude_files/: dark-mode-plan.md
concept_lab/: concept_server.py  index.html  serve.py  test_all_endpoints.py  test_api.py  test_new_features.py
e2e/: test_buttons_force_hover.py  test_image_buttons.py  test_issue_fixes.py  test_tall_image.py
extension/: background.js  content.js  manifest.json  sidepanel.html  sidepanel.js
sample_data/: README.md  metadata.json
src/: App.css  App.tsx  index.css
tests/: quick_screenshot.py  test_all_views.py  test_ui_review.py
(+127 files in other folders)
