[project]
name = "gemini-pageant"
version = "0.1.0"
description = "Gemini Nano Banana Pro image generation showcase"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.20",
    "aiohttp>=3.13.2",
    # Image search dependencies
    "transformers>=4.40.0",
    "lancedb>=0.4.0",
    "torch>=2.0.0",
    "pyarrow>=15.0.0",
    "pillow>=12.0.0",
    "pillow-heif>=0.21.0",  # HEIC/HEIF support for Pillow
    "accelerate>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "playwright>=1.49",
]

